--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phonebook-backend-fullstackopen",
+  "name": "phonebook-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
