--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.0",
+    "mongoose": "^6.3.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.0",
     "nodemon": "^2.0.15"
   }
 }
