--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
+    "eslint": "^8.15.0",
     "nodemon": "^2.0.15"
   }
 }
